First draft of non-Gaussian vignette

--- a/vignettes/FRKv2.Rnw
+++ b/vignettes/FRKv2.Rnw
@@ -1,10 +1,19 @@
 \documentclass{article}
 
+%% Specific this vignette
 \usepackage[margin=1in]{geometry}
+\renewcommand{\tt} {\texttt}
+\let\code=\texttt
+\newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
+\let\proglang=\textsf
+\usepackage{hyperref}
 
-\usepackage{siunitx} % si units
+
 
 % ---- Math mode commands ----
+
+
+\usepackage{siunitx} % si units
 
 \usepackage{rotating} % \rotatebox
 
@@ -106,15 +115,11 @@
 }
 
 
-%% New for this vignette
-\renewcommand{\tt} {\texttt}
-\let\code=\texttt
-\newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
-\let\proglang=\textsf
+
 
 \author{Matthew Sainsbury-Dale, Andrew Zammit-Mangion, and Noel Cressie}
 
-\title{Modelling, Fitting, and Prediction with Non-Gaussian Spatial and Spatio-Temporal Data using \pkg{FRK}}
+\title{Fixed Rank Kriging of Non-Gaussian Data using \pkg{FRK}}
 
 \usepackage[authoryear]{natbib}
 
@@ -127,8 +132,9 @@
 \begin{abstract}
  Non-Gaussian spatial and spatial-temporal data are becoming increasingly prevalent, arising from studies as far apart as small area demographics (counts) and global remote sensing (radiant energies). 
   \pkg{FRK} is an \proglang{R} package for spatial/spatio-temporal modelling and prediction with large data sets. 
-In this vignette, we demonstrate the modelling of non-Gaussian data  using \pkg{FRK}. 
-The existing functionality of \pkg{FRK} is retained with this advance; in particular, it makes use of automatic basis-function construction, it can handle both point-referenced and areal data simultaneously, and it predicts process values at any spatial support from these data. See the vignette ``FRK\_intro'' for general usage of the package. 
+In this vignette, we demonstrate the modelling of non-Gaussian data using \pkg{FRK}. 
+% This vignette serves to demonstrate the use of the \proglang{R} package \pkg{FRK} for analysing non-Gaussian spatial and spatio-temporal data. 
+ All of the functionality that \pkg{FRK} offers in a Gaussian setting extends to a non-Gaussian setting: See the vignette ``FRK\_intro'', which describes how the BAUs and basis functions work; inference over different spatial manifolds (such as the sphere); inference in a spatio-temporal setting; and spatial change of support. 
 \end{abstract}
 
 <<setup, include=FALSE, cache=FALSE>>=
@@ -140,6 +146,11 @@ knitr::opts_chunk$set(dpi=100)
 @
 
 \tableofcontents 
+
+ % In Section \ref{SEC:Methodology}, we provide an overview of the model used by \pkg{FRK} in a non-Gaussian setting. 
+ % In Section \ref{sec:simulated_example} we use a small simulated data set to demonstrate the basic work flow of \pkg{FRK}. 
+ % In Section \ref{sec:Americium}, we provide a real-world example analysing lognormally distributed soil data, and generate predictions throughout the spatial domain, and over pre-specifed spatial regions known as blocks. 
+
 
 \section{Methodology}\label{SEC:Methodology}
 
@@ -323,61 +334,290 @@ Since each element in $D^P$ is the union of subsets of $D^G$, one can construct 
 \]
 such that $\vec{\mu}_P = \vec{C}_P \vec{\mu}$. Again, we use MC sampling to predict $\vec{\mu}_P$. 
 
-\section{Example: Non-Gaussian, point-referenced spatial data}
+\section{Example: Simulated Non-Gaussian, point-referenced spatial data}\label{sec:simulated_example}
 
-In this part of the vignette we apply \pkg{FRK} to the case when we have non-Gaussian, point-referenced spatial data. 
- For simplicity, in this vignette we only consider inference on the plane; for other manifolds, such as the sphere, see the vignette ``FRK\_intro''. 
- 
+First, load the required packages. 
  <<eval=TRUE,message=FALSE,warning=FALSE>>=
 library("FRK")       # for carrying out FRK       
 library("sp")        # for defining points/polygons
 library("dplyr")     # for easy data manipulation
+library("reshape2")  # for easy data manipulation
 library("ggplot2")   # for plotting
 library("ggpubr")    # for arranging plots
 @
 
-First, we simulate a Poisson data set. 
+Now, simulate some Poisson distributed spatial data. 
 
  <<eval=TRUE,message=FALSE,warning=FALSE>>=
-m <- 1000                                                  # Sample size
+m <- 250                                                   # Sample size
 RNGversion("3.6.0"); set.seed(1)                           # Fix seed
 zdf <- data.frame(x = runif(m), y= runif(m))               # Generate random locs
-zdf$Y <- sin(8 * zdf$x) + cos(8 * zdf$y) + 0.5 * rnorm(m)  # Simulate latent process
-zdf$z <- rpois(m, lambda = zdf$Y^2)                        # Simulate data
+zdf$Y <- 3 + sin(7 * zdf$x) + cos(9 * zdf$y)               # Latent process
+zdf$z <- rpois(m, lambda = exp(zdf$Y))                     # Simulate data
 coordinates(zdf) = ~x+y                                    # Turn into sp object
 @
 
-
-Now, we run \pkg{FRK}. There is an `expert' way of using \pkg{FRK}, which involves using the functions \fct{auto\_BAUs} and \fct{auto\_basis} to automatically construct BAUs and basis functions from the data, \fct{SRE} to initialise the SRE model object and perform data preprocessing, and \fct{SRE.fit} to fit the model object. 
- This `expert' way is documented in the vignette ``FRK\_intro''. 
- Alternatively, there is a `simple' way of using \pkg{FRK} that uses the high-level wrapper function \fct{FRK} that calls these functions under-the-hood; in this vignette, we will use the `simple' way. 
- 
+There is an `expert' way of using \pkg{FRK} that involves using the functions \fct{auto\_BAUs} and \fct{auto\_basis} to automatically construct BAUs and basis functions from the data, and \fct{SRE} and \fct{SRE.fit} to initialise and fit the SRE model object. 
+ This `expert' way is documented in the vignette ``FRK\_intro''.
+ Alternatively, there is a `simple' way of using \pkg{FRK} that uses the high-level wrapper function \fct{FRK} that calls these functions under-the-hood; in this vignette, we will use the `simple' way.
 <<eval=TRUE,message=FALSE,warning=FALSE,results='hide'>>=
 S <- FRK(f = z ~ 1,               # Formula to FRK
          list(zdf),               # All datasets are supplied in list
-         nres = 1,                # Reduce run-time using only 1 basis function resolution
-         response = "poisson",    # Poisson data model
-         link = "square-root")    # square-root link function
+         nres = 2,                # Low-rank model to reduce run-time
+         response = "poisson",    # data model
+         link = "log")            # link function
 pred <- predict(S)                # prediction stage
 @
+\pkg{FRK} includes two plotting methods, \fct{plot} and \fct{plot\_spatial\_or\_ST}; the former takes an SRE object and the result of a call to predict, and returns a list of \class{ggplot} objects containing the predictions and uncertainty quantification of those predictions, while the latter is a general-purpose function for \class{Spatial*DataFrame} and \class{STFDF} objects.
+<<eval=TRUE,message=FALSE,warning=FALSE,results='hide'>>=
+plot_list <- plot(S, pred)
+plot_list <- c(plot_list, plot_spatial_or_ST(zdf, "z"))
+@
+This list of plot objects can then be arranged using one of the many functions for arranging \class{ggplot} objects: See Figure \ref{fig:example1}.
 
-\pkg{FRK} includes two plotting methods, \fct{plot} and \fct{plot\_spatial\_or\_ST}; the former takes an SRE object and the result of a call to predict, and returns a list of \class{ggplot} objects containing the predictions and uncertainty quantification of those predictions, while the former is a general-purpose function for \class{Spatial*DataFrame} and \class{STFDF} objects. See Figure \ref{fig:example1}.
-
-<<warning=FALSE,fig.align='center',fig.cap="(Left) Simulated poisson data. (Centre) Prediction of the mean process. (Right) Uncertainty quantification of predictions, specifically the width of the 90\\% posterior predictive interval.\\label{fig:example1}",fig.subcap=c("","")>>=
-plot_list <- plot(S, pred, zdf)
-ggarrange(plot_list$z + labs(fill = "data"), 
-          plot_list$p_mu + labs(fill = "pred."), 
-          plot_list$interval90_mu + labs(fill = "pred.\nuncertainty"), 
-          nrow = 1, legend = "top") 
+<<echo=FALSE, warning=FALSE,fig.align='center',fig.cap="(Left) Simulated Poisson spatial data. (Centre) Prediction of the mean process. (Right) Uncertainty quantification of predictions; specifically the width of the 90\\% posterior predictive interval.\\label{fig:example1}",fig.subcap=c("",""), fig.width = 10, fig.height = 4>>=
+ggarrange(plot_list$z + labs(fill = "data"),
+          plot_list$p_mu + labs(fill = "pred."),
+          plot_list$interval90_mu + labs(fill = "pred.\nuncertainty"),
+          nrow = 1, legend = "top")
 @
 
-\section{Example: Log-normal point and block prediction}
+
+\section{Example: Lognormally distributed soil data, point and block-level predictions}\label{sec:Americium}
+
+Between 1954 and 1963, nuclear devices were detonated at Area 13 of the Nevada Test Site in the United States, contaminating the surrounding soil with the radioactive element americium (Am). 
+In 1971, the Nevada Applied Ecology Group measured Am concentrations in a region surrounding Ground Zero (GZ), the location where the devices were detonated \citep{Paul_Cressie_2011_lognormal_kriging_block_prediction}. 
+The total number of measurements (including some that are collocated) is 212.
+ In the following, we load this data set (supplied by \pkg{FRK}), and define GZ. 
+
+<<eval=TRUE,message=FALSE,warning=FALSE>>=
+data("Am_data")
+coordinates(Am_data) = ~ Easting + Northing # convert to sp object
+GZ_df <- data.frame("Easting" = 219868.09, "Northing" = 285320.8)
+@
+
+The left and centre panels of Figure \ref{fig:Am_data} shows the data on the original scale and on the log scale, respectively.
+\cite{Paul_Cressie_2011_lognormal_kriging_block_prediction} note that these Am concentrations are lognormally distributed, and that soil remediation is often made by averaging the contaminant over pre-specified spatial regions of $D$ called blocks.
+Hence, this application requires lognormal prediction over blocks, a task well suited to \pkg{FRK}. 
+ The right panel of Figure \ref{fig:Am_data} shows a blocking scheme containing five blocks that we will predict over, which is centred on GZ.
+ 
+
+<<echo=FALSE, warning=FALSE, results='hide'>>=
+
+# centre, width, and height
+makeRectangle <- function(centre, w, h) {
+  vertices <- rbind(c(centre[, 1] - w/2, centre[, 2] - h/2),
+                    c(centre[, 1] - w/2, centre[, 2] + h/2),
+                    c(centre[, 1] + w/2, centre[, 2] + h/2),
+                    c(centre[, 1] + w/2, centre[, 2] - h/2),
+                    c(centre[, 1] - w/2, centre[, 2] - h/2))
+  Polygon(vertices)
+}
+
+
+## Following Paul and Cressie (2011),
+## we predict over a series of concentric square blocks centred at Ground Zero 
+## (GZ), as well as a series of concentric square blocks away from GZ.
+  n_schemes <- 1
+  n_block <- 5
+construct_block_scheme <- function() {
+  
+  ratio <- 1.03  # width to height ratio of the blocks
+  w     <- seq(43, 250, length.out = n_block)
+  h     <- w / ratio
+  
+  ## Treat GZ as the centre, and expand relative to GZ.
+  blocks <- list()
+  for(i in 1:n_block) {
+    blocks[[i]] <- makeRectangle(centre = GZ_df, w = w[i], h = h[i])
+    blocks[[i]] <- Polygons(list(blocks[[i]]), paste0("block", i))
+  }
+  
+  if (n_schemes == 2) {
+    ## Now shift away from GZ
+    centre <- GZ_df
+    centre[, 1] <- GZ_df[, 1] - 153
+    centre[, 2] <- GZ_df[, 2] + 125
+    for(i in (n_block + 1):(2 * n_block)) {
+      blocks[[i]] <- makeRectangle(centre = centre, w = w[i - n_block], h = h[i- n_block])
+      blocks[[i]] <- Polygons(list(blocks[[i]]), paste0("block", i))
+    }
+  }
+  
+  ## (set the plotting order from largest to smallest)
+  pred_polygons <- SpatialPolygons(blocks, (n_schemes * n_block):1)
+  coordnames(pred_polygons) <- c("Easting", "Northing")
+  
+  pred_polygons$Scheme <- rep(as.character(n_schemes:1), each = length(pred_polygons)/n_schemes) 
+  
+  return(pred_polygons)
+}
+
+blocks <- construct_block_scheme()
+@
+
+<<echo=FALSE, warning=FALSE, results='hide', fig.align='center',fig.cap="Americium soil data and blocking scheme.\\label{fig:Am_data}", fig.width = 13.6, fig.height = 4.5>>=
+nasa_palette <- c("#03006d","#02008f","#0000b6","#0001ef","#0000f6","#0428f6","#0b53f7","#0f81f3",
+                  "#18b1f5","#1ff0f7","#27fada","#3efaa3","#5dfc7b","#85fd4e","#aefc2a","#e9fc0d","#f6da0c","#f5a009",
+                  "#f6780a","#f34a09","#f2210a","#f50008","#d90009","#a80109","#730005")
+
+lab1 <- xlab(as.expression(bquote("Easting /" ~ 10^5 ~ "m")))
+lab2 <- ylab(as.expression(bquote("Northing /" ~ 10^5 ~ "m")))
+
+formatter <- function(x){ 
+    x/10^5 
+}
+x_scale <- scale_x_continuous(breaks = 10^5 *c(2.197, 2.199, 2.201), labels = formatter)  
+y_scale <- scale_y_continuous(breaks = 10^5 * c(2.852, 2.854, 2.856), labels = formatter)
+
+## Basic plot to reduce code repetition
+p_basic <- ggplot(data = as.data.frame(Am_data), 
+                  aes(x = Easting, y = Northing)) +
+  lab1 + lab2 + x_scale + y_scale + theme_bw() + coord_fixed()
+
+## Data on the original scale
+p_data <- p_basic +
+  geom_point(aes(colour = Am), size = 1)  +
+  geom_point(data = GZ_df, shape = 4, size = 5) +
+  scale_colour_gradientn(colours = nasa_palette,
+                         labels = scales::scientific, 
+                         breaks = c(250000, 750000))
+
+## Data on the log scale
+p_data_log_scale <- p_basic +
+  geom_point(aes(colour = log(Am)), size = 1) +
+  geom_point(data = GZ_df, shape = 4, size = 5) +
+  scale_colour_gradientn(colours = nasa_palette,
+                         name = "Log-Americium", 
+                         breaks = c(9, 11, 13))
+
+## Blocking scheme
+p_Scheme_1_2 <- p_basic +
+  geom_point(size = 0.3) +
+  geom_point(data = GZ_df, shape = 4, size = 5) +
+  geom_polygon(data = FRK::SpatialPolygonsDataFrame_to_df(blocks), 
+               aes(group = id, colour = Scheme), alpha = 0) +
+  labs(colour = "Blocking Scheme")
+
+ggarrange(p_data + theme(legend.text=element_text(angle = 20)) + 
+            theme(text = element_text(size=17)), 
+          p_data_log_scale + theme(text = element_text(size=17)), 
+          p_Scheme_1_2 + theme(text = element_text(size=17)), 
+          nrow = 1, align = "hv", legend = "top")
+@
+
+
+Following \cite{Paul_Cressie_2011_lognormal_kriging_block_prediction}, we use a piecewise linear trend, where observations within a distance of 30.48m from GZ follow a different trend to those observations beyond 30.48m from GZ.
+ In \pkg{FRK}, covariates must be defined at the BAU level.  
+ 
+<<eval=TRUE,message=FALSE,warning=FALSE>>=
+BAUs <- auto_BAUs(manifold = plane(), 
+                  type = "grid",            
+                  data = Am_data,           
+                  nonconvex_hull = FALSE) 
+
+## Add covariates to the BAUs
+d_cutoff <- 30.48  
+d_BAU <- distR(coordinates(BAUs), GZ_df)
+BAUs$x1 <- as.numeric(d_BAU < d_cutoff)
+BAUs$x2 <- d_BAU * BAUs$x1
+BAUs$x3 <- as.numeric(d_BAU >= d_cutoff)
+BAUs$x4 <- d_BAU * (BAUs$x3)
+@
+
+In the following, we indicate that a scalar covariance matrix should be used for the fine-scale variation term (implicit when allowing \fct{FRK} to construct that BAUs), and we replicate lognormal kriging by fixing the measurement-error standard deviation to a small value. 
+Then, we run \fct{FRK} as usual, set \code{est\_error = FALSE} so that the measurement-error standard deviation is not estimated.
 
 <<eval=TRUE,message=FALSE,warning=FALSE,results='hide'>>=
-GZ_df <- data.frame("Easting" = 219868.09, "Northing" = 285320.8)
+BAUs$fs     <- 1     
+Am_data$std <- 1
 
+S <- FRK(f = Am ~ -1 + x1 + x2 + x3 + x4, data = list(Am_data),
+         response = "gaussian", 
+         link = "log",
+         BAUs = BAUs, 
+         nres = 2, 
+         est_error = FALSE)
 @
 
+By predicting over the BAUs, one may generate predictions over the entire spatial domain. In \fct{predict}, we set \code{type = c("link", "mean")} to obtain predictions for both the latent process $Y(\cdot)$, and the mean process $\mu(\cdot)$. Figure \ref{fig:Am_BAU_predictions} shows BAU level predictions and uncertainty using \pkg{FRK}. 
+
+<<eval=TRUE,message=FALSE,warning=FALSE,results='hide'>>=
+pred <- predict(S, type = c("link", "mean"))
+plot_list <- plot(S, pred)
+@
+
+<<echo=FALSE, message=FALSE,warning=FALSE,results='hide',fig.align='center',fig.cap="Americium point predictions.\\label{fig:Am_BAU_predictions}",fig.subcap=c("",""),fig.width = 8, fig.height = 5>>=
+plot_list <- lapply(
+  plot_list, 
+  function(gg) gg + lab1 + lab2 + x_scale + y_scale)
+
+ggarrange(
+  plot_list$p_Y + labs(fill = "Y pred.") +   
+    scale_fill_gradientn(colours = nasa_palette, labels = scales::scientific),
+  plot_list$RMSPE_Y + labs(fill = "RMSPE Y"),
+  plot_list$p_mu + labs(fill = "mu pred.") +    
+    scale_fill_gradientn(colours = nasa_palette, labels = scales::scientific),
+  plot_list$RMSPE_mu + labs(fill = "RMSPE mu"), 
+  align = "hv", nrow = 2, ncol =2) 
+@
+
+
+Alternatively, by passing a \class{SpatialPolygonsDataFrame} object into the \code{newdata} argument of \fct{predict}, one may straightforwardly generate block-level predictions. When predicting over arbitrary spatial regions, \pkg{FRK} is limited to prediction of the mean process. 
+
+<<eval=TRUE,message=FALSE,warning=FALSE,results='hide'>>=
+pred <- predict(S, newdata = blocks) 
+@
+
+ These block level predictions may be plotted with the help of \fct{SpatialPolygonsDataFrame\_to\_df}; see Figure \ref{fig:Am_block_predictions_spatial}. 
+
+% FRK_results <- pred$newdata@data
+% FRK_results$area_sqrt <- sapply(blocks@polygons, function(x) sqrt(x@area))
+% # FRK_results$Scheme <- as.numeric(blocks@data$Scheme)
+% 
+% FRK_results <- FRK_results %>%
+%   dplyr::select(c("p_mu", "RMSPE_mu", "area_sqrt")) %>% #, "Scheme")) %>% 
+%   reshape2::melt(id.vars = c("area_sqrt"))#, "Scheme")) %>% 
+%   ## alter the levels to change the facet_wrap titles:
+%   mutate(variable = factor(
+%     variable, 
+%     labels = c("'Block prediction /' ~ 10^3 ~ 'counts' ~ min^-1", 
+%                "'RMSPE from block prediction /' ~ 10^3 ~ 'counts' ~ min^-1")
+%     ))
+%
+% ggplot(data = FRK_results, aes(x = area_sqrt)) +
+%     geom_line(aes(y = value)) +
+%     facet_wrap(~variable, scales = "free", labeller = label_parsed) + 
+%     labs(x = "Block size (m)", y = "", 
+%          colour = "Blocking Scheme") +
+%     theme_bw() + scale_y_continuous(labels = scales::scientific) + 
+%     theme(text = element_text(size=17))
+
+<<echo=FALSE, warning=FALSE,fig.align='center',fig.cap="Americium block level predictions.\\label{fig:Am_block_predictions_spatial}",fig.subcap=c("",""),fig.width = 9.5, fig.height = 3.7>>=
+
+block_pred_df <- FRK::SpatialPolygonsDataFrame_to_df(pred$newdata)
+
+## Change level order to reverse the order that the blocks are plotted.
+block_pred_df$block <- factor(block_pred_df$id,
+                              levels = paste0("block", (n_schemes * n_block):1))
+p_block <- p_basic +
+  geom_point(size = 0.3) + 
+  geom_polygon(data = block_pred_df, aes(fill = p_mu, group = block),
+               alpha = 1, colour = "black") + 
+  labs(fill = "mu pred.") +   
+  scale_fill_gradientn(colours = nasa_palette, labels = scales::scientific)
+  
+
+p_block_RMSPE <- p_basic +
+  geom_point(size = 0.3) +
+  geom_polygon(data = block_pred_df, aes(fill = RMSPE_mu, group = block),
+               alpha = 1, colour = "black") +
+  scale_fill_distiller(palette = "BrBG",
+                       labels = scales::scientific) + 
+  labs(fill = "RMSPE mu")
+
+ggpubr::ggarrange(p_block, p_block_RMSPE, nrow = 1, align = "hv")
+@
 
 \bibliography{FRKv2}
 
